--- a/src/app/components/login-component/login-component.component.html
+++ b/src/app/components/login-component/login-component.component.html
@@ -1,1 +1,89 @@
-<p>login-component works!</p>
+<div class="columns is-centered is-gapless">
+    <div class="column is-8 is-multiline">
+        <div class="box is-image-holder">
+            <div class="card">
+                <div class="card-content">
+                  <p class="title">
+                    If I would be given a chance to start all over again, I would choose Network Marketing
+                  </p>
+                  <p class="subtitle">
+                     - Bill Gates
+                  </p>
+                </div>
+                <footer class="card-footer">
+                    <p class="card-footer-item">
+                      <span>
+                          <h5 class="subtitle is-6">
+                        If Bill Gates Says It, It Must Be True!
+                    </h5>
+                      </span>
+                    </p>
+                  </footer>
+              </div>
+        </div>
+    </div>
+    <div class="column is-4 is-multiline">
+        <section class="hero is-dark is-bold">
+            <div class="hero-head has-text-centered is-login-form">
+                <h3 class="title">
+                  LOGIN
+                </h3>
+                <h6 class="subtitle is-6">
+                    Join A Community Of Professional Students
+                </h6>
+            </div>
+            <div class="hero-body">
+                <div class="box is-login-form">
+                    <div class="field">
+                        <label class="label">Username</label>
+                        <p class="control has-icons-left has-icons-right">
+                          <input class="input" type="email" placeholder="Email">
+                          <span class="icon is-small is-left">
+                            <i class="fas fa-envelope"></i>
+                          </span>
+                        </p>
+                      </div>
+                      <div class="field">
+                        <label class="label">Password</label>
+                        <p class="control has-icons-left">
+                          <input class="input" type="password" placeholder="Password">
+                          <span class="icon is-small is-left">
+                            <i class="fas fa-lock"></i>
+                          </span>
+                        </p>
+                      </div>
+                      <div class="level">
+                      <div class="field level-left">
+                        <button class="button is-success">Login</button>
+                      </div>
+                    </div>
+                      <div class="field has-text-centered">
+                      <button class="button is-small is-rounded is-danger">
+                        <span class="icon">
+                          <i class="fab fa-github"></i>
+                        </span>
+                        <span>Login With GitHub</span>
+                      </button>
+                    </div>
+                    <div class="field has-text-centered">
+                        <button class="button is-small is-rounded is-primary">
+                          <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                          </span>
+                          <span>Login With LinkedIn</span>
+                        </button>
+                      </div>
+                      <div class="field has-text-centered">
+                        <h6 class="subtitle is-6">
+                            Not A User? Sign up 
+                            <a href="\Signup">Here</a>
+                        </h6>
+                      </div>
+                </div>
+            </div>
+            <div class="hero-foot has-text-centered">
+                    Organize, Participate & Collaborate.
+            </div>
+          </section>
+    </div>
+  </div>
