--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bulma/bulma.sass"
+@import "tailwindcss/base"
+
+@import "tailwindcss/components"
+
+@import "tailwindcss/utilities"
+
+html
+    background: transparentize(linen, 0.4)
+    height: 100%
