--- a/src/app/components/signup/signup.component.sass
+++ b/src/app/components/signup/signup.component.sass
@@ -1,7 +1,6 @@
 @import "cirrus-ui/src/core/forms.css"
 @import "cirrus-ui/src/ext/form-ext.css"
 @import "cirrus-ui/src/core/font.css"
-@import "cirrus-ui/src/core/button.css"
 @import "bulma/bulma.sass"
 
 $success-color: #0dd157
@@ -38,3 +37,9 @@ $success-color: #0dd157
 
 .card .subtitle, .card .title
     color:#fff
+
+.message.is-danger
+    left: 50%
+    z-index: 9999
+    width: 30%
+    position: absolute
