--- a/src/app/components/competitions-tab/competitions-tab.component.html
+++ b/src/app/components/competitions-tab/competitions-tab.component.html
@@ -9,8 +9,8 @@
 </div>
 <div class="ui divider"></div>
 <div class="ui stackable grid eventsContainer">
-    <div class="twelve wide column">
-    <div class="ui stackable link cards">
+    <div class="fourteen wide column">
+    <div class="ui centered stackable link cards">
     <div class="ui card" *ngFor="let pl of [0,1,2,3,4,5]">
         <div class="content">
           <div class="ui sub header">Fri, 13th February, 2020 @ 5:30 PM</div>
@@ -78,7 +78,7 @@
       </div>
     </div>
 </div>
-    <div class="four wide column">
+    <div class="two wide computer sixteen wide mobile column">
         <h3 class="ui centered header">
             Categories
         </h3>
