--- a/src/app/components/competition-page/competition-page.component.html
+++ b/src/app/components/competition-page/competition-page.component.html
@@ -1,4 +1,4 @@
-<div class="ui grid container">
+<div class="ui stackable grid container">
     <div class="nine wide column">
         <img class="ui big rounded image" src="signup.jpg">
     </div>
@@ -24,21 +24,10 @@
         <h4 class="ui header">
             <i class="clock icon"></i> 5:30 PM
         </h4>
-        <div class="row">
-            <button class="ui negative button">
-                Attend
-            </button>
-            <button class="ui black button">
-                View Discussion Forum
-            </button>
-            <button class="ui olive button">
-                Mark As Interesting
-            </button>
-            </div>
     </div>
 </div>
 <div class="ui divider"></div>
-<div class="ui grid container">
+<div class="ui stackable grid container">
     <div class="nine wide column">
         <h2 class="ui header">Event Details</h2>
         <div class="content">
@@ -76,3 +65,6 @@
         </button>
     </div>
 </div>
+<app-attend-navbar></app-attend-navbar>
+
+
