--- a/src/app/components/collaborations-tab/collaborations-tab.component.sass
+++ b/src/app/components/collaborations-tab/collaborations-tab.component.sass
@@ -1,4 +1,2 @@
-.tile.is-child
-    margin-right: 2% !important
-.column.is-3 .tile
-    margin-bottom: 3% !important
+.ui.grid.container
+    padding-top:3%
