--- a/src/app/components/competitions-tab/competitions-tab.component.sass
+++ b/src/app/components/competitions-tab/competitions-tab.component.sass
@@ -1,4 +1,16 @@
-.tile.is-child
-    margin-right: 2% !important
-.column.is-3 .tile
-    margin-bottom: 3% !important
+.eventsContainer
+    padding-right: 3%
+    padding-left: 3%
+
+.ui.grid.container 
+    padding-top:1%
+    padding-bottom: 1%
+
+.card
+    margin-right: 4% !important
+
+.imagecontainer
+    background: url('../../../assets/signup.jpg')
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: center center
