--- a/src/app/components/events-tab/events-tab.component.sass
+++ b/src/app/components/events-tab/events-tab.component.sass
@@ -1,4 +1,18 @@
-.tile.is-child
-    margin-right: 2% !important
-.column.is-3 .tile
-    margin-bottom: 3% !important
+.col-content
+    background-size: cover !important
+    background-position: center center !important
+    background-repeat: no-repeat !important
+    border-radius: 5px
+    height : 100%
+    padding: 40% 3% 0% 3%
+
+.header
+    color: #fff
+
+.interested
+    margin-bottom:5%
+
+
+@media (max-width: 500px)
+    .interested
+        float : left !important
