--- a/src/app/components/login-component/login-component.component.html
+++ b/src/app/components/login-component/login-component.component.html
@@ -76,7 +76,7 @@
                       <div class="field has-text-centered">
                         <h6 class="subtitle is-6">
                             Not A User? Sign up 
-                            <a href="\Signup">Here</a>
+                            <a href="/signup">Here</a>
                         </h6>
                       </div>
                 </div>
