--- a/src/app/components/post-event/post-event.component.sass
+++ b/src/app/components/post-event/post-event.component.sass
@@ -1,2 +1,13 @@
 .modal
     display: block
+
+
+.modal-content
+    overflow: hidden
+    width : 100%
+    top: 50%
+    transform: translateY(-50%)
+
+.title 
+    color: #fff
+    text-align: center
