--- a/src/app/components/collaborations-tab/collaborations-tab.component.html
+++ b/src/app/components/collaborations-tab/collaborations-tab.component.html
@@ -1,55 +1,26 @@
-<div class="container">
-    <div class="columns">
-    <div class="column is-9">
-    <div class="columns is-multiline">
-    <div class="column is-4">
-    <article class="tile notification is-vertical is-info">
-        <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure>
-      <p class="title">Middle tile</p>
-      <p class="subtitle">With an image</p>
-    </article>
-    </div>
-    </div>
-</div>
-<div class="column is-3">
-    <h4 class="title">Previous Collabs</h4>
-<div class="tile">
-<div class="box">
-<article class="media">
-    <div class="media-left">
-    <figure class="image is-96x96">
-        <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
-    </figure>
-    </div>
-    <div class="media-content">
-    <div class="content">
-        <h4 class="subtitle">
-            Abc
-        </h4>
-        <p>
-            Event was Hackathon.
-        </p>
-    </div>
-    <nav class="level is-mobile">
-        <div class="level-left">
-        <a class="level-item" aria-label="View Event">
-            <span class="icon is-small">
-            <i class="fas fa-eye" aria-hidden="true"></i>
-            </span>
-        </a>
-        <a class="level-item" aria-label="Add to Later">
-            <span class="icon is-small">
-            <i class="fas fa-heart" aria-hidden="true"></i>
-            </span>
-        </a>
+<div class="ui grid container">
+    <div class="ui centered stackable link cards">
+        <div class="card" *ngFor="let pl of [0,1,2,3,4,5,6,7,8]">
+          <div class="content">
+            <img class="right floated ui avatar image" src="assets/coding.png">
+            <div class="header">
+              Post Title
+            </div>
+            <div class="meta">
+              Posted By
+            </div>
+            <div class="description">
+                local developers with similar interests in technology. 
+                A GDG meetup event includes talks on a wide range of 
+                technical topics where you can learn new skills
+            </div>
+          </div>
+          <div class="extra content">
+            <div class="ui two buttons">
+              <div class="ui basic green button">Approve</div>
+              <div class="ui basic red button">Decline</div>
+            </div>
+          </div>
         </div>
-    </nav>
-    </div>
-</article>
-</div>
-</div>
-</div>
-</div>
+      </div>
 </div>
