--- a/src/app/components/events-tab/events-tab.component.html
+++ b/src/app/components/events-tab/events-tab.component.html
@@ -1,55 +1,19 @@
-<div class="container">
-    <div class="columns">
-    <div class="column is-9">
-    <div class="columns is-multiline">
-    <div class="column is-4">
-    <article class="tile notification is-vertical is-info">
-        <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure>
-      <p class="title">Middle tile</p>
-      <p class="subtitle">With an image</p>
-    </article>
-    </div>
-    </div>
-</div>
-<div class="column is-3">
-    <h4 class="title">Trending Events</h4>
-<div class="tile">
-<div class="box">
-<article class="media">
-    <div class="media-left">
-    <figure class="image is-96x96">
-        <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
-    </figure>
-    </div>
-    <div class="media-content">
-    <div class="content">
-        <h4 class="subtitle">
-            Partaaaay!
-        </h4>
-        <p>
-            This is a Party
-        </p>
-    </div>
-    <nav class="level is-mobile">
-        <div class="level-left">
-        <a class="level-item" aria-label="View Event">
-            <span class="icon is-small">
-            <i class="fas fa-eye" aria-hidden="true"></i>
-            </span>
-        </a>
-        <a class="level-item" aria-label="Add to Later">
-            <span class="icon is-small">
-            <i class="fas fa-heart" aria-hidden="true"></i>
-            </span>
-        </a>
+<div class="ui  three column  stackable grid container">
+        <div class="column" *ngFor="let event of events">
+            <div class="col-content" [ngStyle]="{background : 'url(' + event.image +')'}">
+            <h2 class="ui header eventTitle">
+                {{event.title}}
+            </h2>
+            <div class="ui divider"></div>
+            <div class="extra content">
+                <h5 class="ui header left floated">
+                    {{event.people}} People Interested
+                </h5>
+                <button class="ui positive right floated right labeled icon button interested">
+                    <i class="heart outline icon"></i>
+                    I'm Interested
+                </button>
+            </div>
         </div>
-    </nav>
-    </div>
-</article>
-</div>
-</div>
-</div>
-</div>
+        </div>
 </div>
