--- a/src/app/components/post-event/post-event.component.html
+++ b/src/app/components/post-event/post-event.component.html
@@ -1,7 +1,36 @@
 <div class="modal" *ngIf="openState">
     <div class="modal-background"></div>
     <div class="modal-content">
-      <!-- Any other Bulma elements you want -->
+      <div class="container">
+        <div class="column">
+          <div class="columns">
+          <div class="column is-4">
+          <article class="tile notification is-vertical is-info">
+              <figure class="image is-4by3">
+                  <img src="assets/competition.png">
+                </figure>
+            <p class="title is-4">Post Competition</p>
+          </article>
+          </div>
+          <div class="column is-4">
+            <article class="tile notification is-vertical is-danger">
+                <figure class="image is-4by3">
+                    <img src="assets/party.png">
+                  </figure>
+                  <p class="title is-4">Post Event</p>
+            </article>
+            </div>
+            <div class="column is-4">
+              <article class="tile notification is-vertical is-success">
+                  <figure class="image is-4by3">
+                      <img src="assets/collab.png">
+                    </figure>
+                    <p class="title is-4">Post Collaboration</p>
+              </article>
+              </div>
+          </div>
+      </div>
+      </div>
     </div>
     <button class="modal-close is-large" aria-label="close" (click)="closeEventModal()"></button>
   </div>
