--- a/src/app/components/user-timeline/user-timeline.component.html
+++ b/src/app/components/user-timeline/user-timeline.component.html
@@ -1,16 +1,135 @@
-<div class="ui grid centered container">
-    <h3 class="ui header">
+<div class="ui centered grid container">
+    <div class="twelve wide column timeline">
+    <h3 class="ui centered header row">
         Timeline
     </h3>
-    <div class="ui divider"></div>
-    <div class="twelve wide column timeline">
-        <div class="ui equal width grid">
+        <div class="ui grid">
             <div class="two wide stretchable column">
+                <div class="notif-label">
+                    D
+                </div>
+                <div class="stretched-divider">
 
+                </div>
             </div>
             <div class="fourteen wide column">
+                <h4 class="ui title">
+                    Title Of The Timeline Event
+                </h4>
+                <a class="ui black label">January 2020</a>
+                <a class="ui red label">Type Of Notif</a>
+                <div class="ui segment">
+                    <h4 class="ui sub header">
+                        The Description of what happened during the said event and it's respective notification.
+                        The Description of what happened during the said event and it's respective notification.
+                        The Description of what happened during the said event and it's respective notification.
+                    </h4>
+                </div>
+                <div class="ui hidden divider"></div>
                 
             </div>
         </div>
+        <div class="ui grid">
+            <div class="two wide stretchable column">
+                <div class="notif-label">
+                    D
+                </div>
+                <div class="stretched-divider">
+
+                </div>
+            </div>
+            <div class="fourteen wide column">
+                <h4 class="ui title">
+                    Title Of The Timeline Event
+                </h4>
+                <a class="ui black label">January 2020</a>
+                <a class="ui red label">Type Of Notif</a>
+                <div class="ui segment">
+                    <h4 class="ui sub header">
+                        The Description of what happened during the said event and it's respective notification.
+                        The Description of what happened during the said event and it's respective notification.
+                    </h4>
+                </div>
+                <div class="ui hidden divider"></div>
+                
+            </div>
+        </div>
+        <div class="ui grid">
+            <div class="two wide stretchable column">
+                <div class="notif-label">
+                    D
+                </div>
+                <div class="stretched-divider">
+
+                </div>
+            </div>
+            <div class="fourteen wide column">
+                <h4 class="ui title">
+                    Title Of The Timeline Event
+                </h4>
+                <a class="ui black label">January 2020</a>
+                <a class="ui red label">Type Of Notif</a>
+                <div class="ui segment">
+                    <h4 class="ui sub header">
+                        The Description of what happened during the said event and it's respective notification.
+                    </h4>
+                </div>
+                <div class="ui hidden divider"></div>
+                
+            </div>
+        </div>
+        <div class="ui grid">
+            <div class="two wide stretchable column">
+                <div class="notif-label">
+                    D
+                </div>
+                <div class="stretched-divider">
+
+                </div>
+            </div>
+            <div class="fourteen wide column">
+                <h4 class="ui title">
+                    Title Of The Timeline Event
+                </h4>
+                <a class="ui black label">January 2020</a>
+                <a class="ui red label">Type Of Notif</a>
+                <div class="ui segment">
+                    <h4 class="ui sub header">
+                        The Description of what happened during the said event and it's respective notification.
+                        The Description of what happened during the said event and it's respective notification.
+                    </h4>
+                </div>
+                <div class="ui hidden divider"></div>
+                
+            </div>
+        </div>
+        <div class="ui grid">
+            <div class="two wide stretchable column">
+                <div class="notif-label">
+                    D
+                </div>
+                <div class="stretched-divider">
+
+                </div>
+            </div>
+            <div class="fourteen wide column">
+                <h4 class="ui title">
+                    Title Of The Timeline Event
+                </h4>
+                <a class="ui black label">January 2020</a>
+                <a class="ui red label">Type Of Notif</a>
+                <div class="ui segment">
+                    <h4 class="ui sub header">
+                        The Description of what happened during the said event and it's respective notification.
+                        The Description of what happened during the said event and it's respective notification.
+                    </h4>
+                </div>
+                <div class="ui hidden divider"></div>
+                
+            </div>
+        </div>
+        <button class="ui primary fluid button">
+            View Previous Activity
+        </button>
     </div>
 </div>
