--- a/src/app/components/user-timeline/user-timeline.component.html
+++ b/src/app/components/user-timeline/user-timeline.component.html
@@ -6,127 +6,56 @@
         <div class="ui grid">
             <div class="two wide stretchable column">
                 <div class="notif-label">
-                    D
+                    <i class="ui user icon"></i>
                 </div>
                 <div class="stretched-divider">
 
                 </div>
             </div>
             <div class="fourteen wide column">
-                <h4 class="ui title">
-                    Title Of The Timeline Event
-                </h4>
-                <a class="ui black label">January 2020</a>
-                <a class="ui red label">Type Of Notif</a>
-                <div class="ui segment">
-                    <h4 class="ui sub header">
-                        The Description of what happened during the said event and it's respective notification.
-                        The Description of what happened during the said event and it's respective notification.
-                        The Description of what happened during the said event and it's respective notification.
-                    </h4>
-                </div>
-                <div class="ui hidden divider"></div>
+                <h3 class="ui top attached success message">
+                    <i class="check icon"></i>
+                    Participating In A Competition 
+                </h3>
+            <div class="ui attached segment">
+                <a class="ui orange left ribbon label">All The Best!</a>
+                <h3 class="ui header right floated">
+                    Friday, 23 January
+                </h3>
+                    <div class="ui header">
+                    <img class="ui avatar image" src="assets/comps.gif">
+                    You Are Participating In <a>Hackathon Event</a>
+                    </div>
                 
             </div>
+        </div>
         </div>
         <div class="ui grid">
             <div class="two wide stretchable column">
                 <div class="notif-label">
-                    D
+                    <i class="ui trophy icon"></i>
                 </div>
                 <div class="stretched-divider">
 
                 </div>
             </div>
             <div class="fourteen wide column">
-                <h4 class="ui title">
-                    Title Of The Timeline Event
-                </h4>
-                <a class="ui black label">January 2020</a>
-                <a class="ui red label">Type Of Notif</a>
-                <div class="ui segment">
-                    <h4 class="ui sub header">
-                        The Description of what happened during the said event and it's respective notification.
-                        The Description of what happened during the said event and it's respective notification.
-                    </h4>
-                </div>
-                <div class="ui hidden divider"></div>
+                <h3 class="ui top attached yellow message">
+                    <i class="check icon"></i>
+                    Won A Competition
+                </h3>
+            <div class="ui attached segment">
+                <a class="ui teal left ribbon label">Congratulations!</a>
+                <h3 class="ui header right floated">
+                    Monday, 28 January
+                </h3>
+                    <div class="ui header">
+                    <img class="ui avatar image" src="assets/comps.gif">
+                    You Won The <a>Hackathon Event</a>.
+                    </div>
                 
             </div>
         </div>
-        <div class="ui grid">
-            <div class="two wide stretchable column">
-                <div class="notif-label">
-                    D
-                </div>
-                <div class="stretched-divider">
-
-                </div>
-            </div>
-            <div class="fourteen wide column">
-                <h4 class="ui title">
-                    Title Of The Timeline Event
-                </h4>
-                <a class="ui black label">January 2020</a>
-                <a class="ui red label">Type Of Notif</a>
-                <div class="ui segment">
-                    <h4 class="ui sub header">
-                        The Description of what happened during the said event and it's respective notification.
-                    </h4>
-                </div>
-                <div class="ui hidden divider"></div>
-                
-            </div>
-        </div>
-        <div class="ui grid">
-            <div class="two wide stretchable column">
-                <div class="notif-label">
-                    D
-                </div>
-                <div class="stretched-divider">
-
-                </div>
-            </div>
-            <div class="fourteen wide column">
-                <h4 class="ui title">
-                    Title Of The Timeline Event
-                </h4>
-                <a class="ui black label">January 2020</a>
-                <a class="ui red label">Type Of Notif</a>
-                <div class="ui segment">
-                    <h4 class="ui sub header">
-                        The Description of what happened during the said event and it's respective notification.
-                        The Description of what happened during the said event and it's respective notification.
-                    </h4>
-                </div>
-                <div class="ui hidden divider"></div>
-                
-            </div>
-        </div>
-        <div class="ui grid">
-            <div class="two wide stretchable column">
-                <div class="notif-label">
-                    D
-                </div>
-                <div class="stretched-divider">
-
-                </div>
-            </div>
-            <div class="fourteen wide column">
-                <h4 class="ui title">
-                    Title Of The Timeline Event
-                </h4>
-                <a class="ui black label">January 2020</a>
-                <a class="ui red label">Type Of Notif</a>
-                <div class="ui segment">
-                    <h4 class="ui sub header">
-                        The Description of what happened during the said event and it's respective notification.
-                        The Description of what happened during the said event and it's respective notification.
-                    </h4>
-                </div>
-                <div class="ui hidden divider"></div>
-                
-            </div>
         </div>
         <button class="ui primary fluid button">
             View Previous Activity
