--- a/src/app/components/user-timeline/user-timeline.component.sass
+++ b/src/app/components/user-timeline/user-timeline.component.sass
@@ -5,7 +5,10 @@
     border-radius: 50%
     color: #fff
     text-align: center
-    padding-top: 3%
+    margin-left:50%
+    transform: translateX(-50%)
+
+.notif-label .icon
     margin-left:50%
     transform: translateX(-50%)
 
