--- a/src/app/components/user-timeline/user-timeline.component.html
+++ b/src/app/components/user-timeline/user-timeline.component.html
@@ -57,6 +57,33 @@
             </div>
         </div>
         </div>
+        <div class="ui grid">
+            <div class="two wide stretchable column">
+                <div class="notif-label">
+                    <i class="ui user icon"></i>
+                </div>
+                <div class="stretched-divider">
+
+                </div>
+            </div>
+            <div class="fourteen wide column">
+                <h3 class="ui top attached blue message">
+                    <i class="check icon"></i>
+                    Started Using Ommon.com
+                </h3>
+            <div class="ui attached segment">
+                <a class="ui purple left ribbon label">Welcome Aboard!</a>
+                <h3 class="ui header right floated">
+                    Sunday, 20 January
+                </h3>
+                    <div class="ui header">
+                    <img class="ui avatar image" src="assets/comps.gif">
+                    You started using ommon platform.
+                    </div>
+                
+            </div>
+        </div>
+        </div>
         <button class="ui primary fluid button">
             View Previous Activity
         </button>
