--- a/src/app/components/user-timeline/user-timeline.component.sass
+++ b/src/app/components/user-timeline/user-timeline.component.sass
@@ -4,13 +4,16 @@
     width:25px
     border-radius: 50%
     color: #fff
-    text-align: center
     margin-left:50%
     transform: translateX(-50%)
+    display: flex
+    justify-content: center
+    align-items: center
 
 .notif-label .icon
-    margin-left:50%
-    transform: translateX(-50%)
+    position: absolute
+    top: 3px
+
 
 .stretched-divider
     height:100%
