--- a/src/app/components/event-modal/event-modal.component.html
+++ b/src/app/components/event-modal/event-modal.component.html
@@ -51,11 +51,25 @@
                     I'm Attending
                 </button>
             </div>
-            <div class="ui top attached centered header">
+            <!-- <div class="ui top attached centered header">
                 <h2 class="ui header">Details</h2>
             </div>
             <div class="ui attached segment">
 
+            </div> -->
+            <div class="ui secondary pointing menu">
+              <a class="active item">
+                Home
+              </a>
+              <a class="item">
+                Messages
+              </a>
+              <a class="item">
+                Friends
+              </a>
+            </div>
+            <div class="ui segment">
+              <p></p>
             </div>
             <div class="ui hidden divider"></div>
             <button class="ui negative fluid button" (click)="updateParent(false)">Close</button>
