--- a/src/app/components/post-event/post-event.component.html
+++ b/src/app/components/post-event/post-event.component.html
@@ -1,5 +1,5 @@
 <div class="ui four column relaxed centered grid" *ngIf="openState">
-  <div class="close" (click)="openState = false">
+  <div class="close"  (click)="closeEventsModal()">
     <span>
       X
     </span>
