--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -61,10 +61,7 @@
             </p>
             <p class="control">
               <a class="button is-primary" href="https://github.com/jgthms/bulma/releases/download/0.8.0/bulma-0.8.0.zip">
-                <span class="icon">
-                  <i class="fas fa-download"></i>
-                </span>
-                <span>Download</span>
+                <a href="/timeline"><span>Timeline</span></a>
               </a>
             </p>
           </div>
